# r-msf

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  Makefile  QWEN.md  README.md  SECURITY.md  SECURITY_AUDIT.md
.cargo/: config.toml  pgo-config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: WINDOWS_SHELLCODE.md
rcf-agent/: Cargo.toml
rcf-agent/src/: main.rs
rcf-agent/tests/: integration_test.rs
rcf-c2/: Cargo.toml
rcf-c2/src/: auth.rs  control.rs  handler.rs  lib.rs  meterpreter.rs  server.rs  session.rs
rcf-cli/: Cargo.toml
rcf-cli/src/: main.rs  report_template.html
rcf-console/: Cargo.toml
rcf-console/src/: commands.rs  completer.rs  console.rs  lib.rs  resource.rs
rcf-core/: Cargo.toml
rcf-core/src/: anonymity.rs  audit.rs  context.rs  crypto.rs  error.rs  evasion.rs  integrity.rs  jobs.rs  lib.rs  module.rs  msf_compat.rs  options.rs  output.rs  target.rs
rcf-core/src/anonymity/: decoy.rs  mod.rs  proxy.rs  report.rs  timing.rs  waf.rs
rcf-core/src/policy/: mod.rs
rcf-db/: Cargo.toml
rcf-db/migrations/00000000000000_init/: down.sql  up.sql
rcf-db/src/: connection.rs  db.rs  export.rs  lib.rs  models.rs  schema.rs
rcf-labs/: Cargo.toml
rcf-labs/src/: advanced_exploits.rs  ctf_modules.rs  exploits.rs  lib.rs  missing_vulns.rs  more_protocol_exploits.rs  network_enum.rs  post_exploit.rs  post_linux.rs  protocol_exploits.rs  real_exploits.rs  scanners.rs  security.rs  web_exploits.rs
rcf-labs/src/exploits/: cmd_injection.rs  mod.rs  path_traversal.rs  sqli_scanner.rs  webshell_upload.rs
rcf-modules/: Cargo.toml
rcf-modules/src/: builtin.rs  lib.rs  manager.rs  registry.rs
rcf-modules/tests/: registry_test.rs
rcf-network/: Cargo.toml
rcf-network/src/: lib.rs  protocols.rs  scanner.rs
rcf-network/src/protocols/: common.rs  http.rs  smb.rs  ssh.rs
rcf-network/src/scanner/: common.rs  raw_syn.rs  tcp_connect.rs  tcp_syn.rs
rcf-payload/: Cargo.toml  build.rs
rcf-payload/src/: encoder.rs  executor.rs  generator.rs  lib.rs  output.rs  pe_builder.rs  polymorphic.rs  stager.rs  stager_linux_x64.asm  templates.rs  windows_shellcode.asm
scripts/: ctf_start.rc  ctf_web.rc  full_engagement.rc  quick_scan.rc  sign-release.sh  web_assessment.rc
