[package]
name = "rcf-core"
version.workspace = true
edition.workspace = true
description = "Core types, traits, and utilities for the Rust Cybersecurity Framework"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
strum = { version = "0.28", features = ["derive"] }
strum_macros = "0.26"
regex = "1"
rand = "0.9"
reqwest = { version = "0.12", features = ["rustls-tls"], optional = true }
